2009-12-13  Matevz Tadel  <matevz.tadel@ijs.si>

	* Pupils/Pupil.cxx:
	* Pupils/Pupil.h:
	Fix handling of leave/enter events. In particular, X sends fake
	events on button press as grabbing is on. Needed to access
	directly the X event to detect that (properly if-defed).
	Set  Fl_Event::fIsOverlay when doing overlay handling.
	Remove unused member mBelowMouseImg.

	* RnrBase/A_Rnr.h:
	Add member fIsOverlay to struct Fl_Event.

2009-12-13  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ZGlPerspective.cxx:
	In ortho modes use 0, 1 for near, far (instead of -1, 1).

	* Pupils/Pupil.cxx:
	* Pupils/Pupil.h:
	Add zmin/max output args to PickTopNameStack().

	* RnrBase/A_Rnr.h:
	Add fZMin/Max members to struct Fl_Event.

2009-12-12  Matevz Tadel  <matevz.tadel@ijs.si>

	Fix stereo rendering for all camera orientations.

	* Glasses/PupilInfo.cxx:
	Put zero-parallax plane at near clipping distance by default.

	* Pupils/Pupil.cxx:
	Properly displace camera by left/right vector from absolute camera
	transformation.

2009-12-11  Matevz Tadel  <matevz.tadel@ijs.si>

	Add support for stereo rendering.

	* Glasses/PupilInfo.cxx:
	* Glasses/PupilInfo.h:
	Add members for controlling stereo rendering:

	* Pupils/Pupil.cxx:
	* Pupils/Pupil.h:
	Add new function rnr_stereo().
	Slightly modify rnr_standard() so that fake-overlay gets
	rendered within it.
	Add members for frustum limits needed for setting of left/right
	camera/perspective parameters and set them up in SetProjection().

	* GledView/GledGUI.cxx:
	Add command-line option -stereo - this makes stereo GL visuals the
	default.

2009-12-10  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/Camera.cxx:
	* Glasses/Camera.h:
	Add member ZTrans mHomeTrans.
	Add functions Identity(), SetHomeTrans(), ResetHomeTrans().
	This allows to set home position of the camera.

2009-12-10  Matevz Tadel  <matevz.tadel@ijs.si>

	Fix problem with resizing of Pupils.

	* Pupils/Pupil.cxx:
	* Pupils/Pupil.h: